Fix Account Display on Mobile-ish

--- a/client/main.scss
+++ b/client/main.scss
@@ -463,3 +463,10 @@ Button {
     width: 300px !important;
   }
 }
+
+@media (max-width: 500px) {
+  .hide {
+    visibility: hidden;
+  }
+
+}
